// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateColorsRegex 1`] = `
Object {
  "colors": "(green-800|green-700|green-500)",
}
`;

exports[`generateLengthUnitRegex 1`] = `
Object {
  "lengthUnits": "((bg|h|m|mt)(\\\\d+|-\\\\d+))",
}
`;

exports[`generateManualClassNameRegex 1`] = `
Object {
  "manualClasses": "(bg-cover|bg-contain|bg-full-height|bg-full-width)",
}
`;

exports[`generateRegexes 1`] = `
Object {
  "colors": "(green-800|green-700|green-500)",
  "integers": "((z)(\\\\d+|-\\\\d+))",
  "lengthUnits": "((bg|h|m|mt)(\\\\d+|-\\\\d+))",
  "manualClasses": "(bg-cover|bg-contain|bg-full-height|bg-full-width)",
}
`;
